# chatbot

./: .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
reviews/: forms.py  model.py  settings.py  urls.py  views.py
reviews/static/css/: style.css
reviews/templates/: chatbot.html  home.html
